tests/ui/frontmatter/frontmatter-whitespace-4.rs
--- cargo
//~^ ERROR: invalid infostring for frontmatter
---

#![feature(frontmatter)]

fn main() {}
